# test-pypackage

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/: CICD_DESIGN.md
.github/actions/compute-next-version/: action.yml
.github/actions/repo-semver/: action.yml
.github/actions/validate-tag/: action.yml
.github/workflows/: build-release.yml  build-stage.yml  cd-release.yml  ci-dev.yml  ci-testing.yml  dev-stage.yml  release-stage.yml
archive/.github/actions/repo-semver/: greatest-semver-tag.sh
archive/.github/workflows/: build-release.yml  release-stage.yml
src/comm_config/: __init__.py
src/comm_config/models/: comm.py
src/comm_config/utils/: comm.py
src/databricks_dataeng/: __init__.py
src/databricks_dataeng/models/: basic.py
src/databricks_dataeng/utils/: basic.py
tests/: __init__.py  checkresults.py  conftest.py  test_version.py
tests/comm_config/: test_comm_config.py
tests/databricks_dataeng/: test_databricks_dataeng.py
tests/general/: test_version.py
tests/models/: checkresults.py
