[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-engtoolkits"
version = "0.0.0"
description = "Databricks data engineering Python toolkits"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Ronald Yu", email = "ronald.c.yu@hotmail.com" }
]
keywords = ["data-engineering", "databricks"]
dependencies = [
    "pydantic>=2.12.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=4.0.0",
    "pydantic>=2.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --junitxml=testing_reports/results/report.xml --html=testing_reports/results/report.html --self-contained-html --cov=src --cov-report=term-missing --cov-report=html:testing_reports/coverage --cov-report=xml:testing_reports/coverage/coverage.xml"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
