[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-engtoolkits"
version = "0.0.0"
description = "Databricks data engineering Python toolkits"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ronald Yu", email = "ronald.c.yu@hotmail.com" }
]
keywords = ["data-engineering", "databricks"]
dependencies = [
    "pydantic>=2.12.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=4.0.0",
    "pydantic>=2.12.0",
    "pycobertura>=4.0.0",
    "junitparser>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*", "*_test"]
python_classes = ["Test*"]
pythonpath = ["src"]
addopts = "-v --self-contained-html --cov=src --cov-report=term-missing"

[tool.test-report-paths]
junit_html = "testing_reports/results/report.html"
junit_xml = "testing_reports/results/report.xml"
coverage_html = "testing_reports/coverage"
coverage_xml = "testing_reports/coverage/coverage.xml"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.test-pass-rate]
# pass_rate: 0~1, 1.0 表示 100% 通過
pass_rate = 1.0
# cov_line_rate: 0~1, 1.0 表示 100% 覆蓋
cov_line_rate = 0.8
# cov_branch_rate: 0~1, 1.0 表示 100% 分支覆蓋
cov_branch_rate = 0.9